backend/feed_data/k8s/feed-data-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feed-data
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feed-data
  template:
    metadata:
      labels:
        app: feed-data
    spec:
      containers:
        - name: formula
          image: dragomir1401/feed-data:latest
          ports:
            - containerPort: 8080
