backend/feed_data/k8s/feed-data-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: feed-data-ingress
  annotations:
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /feed
            pathType: Prefix
            backend:
              service:
                name: feed-data
                port:
                  number: 8080
